--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  #state managment
+  flutter_bloc: ^8.1.2
+
+  equatable: ^2.0.5
+
+  git_it: ^7.6.0
+
+  intl: ^0.19.0
+
+  floor: ^1.4.2
+
+  flutter_hooks: ^0.20.5
+
+  cached_network_image: ^3.3.1  
+
+
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +62,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-
+  retrofit_generator: ^8.1.0
+  floor_generator: ^1.4.2
+  build_runner: ^2.4.9
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -57,6 +75,16 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: Muli
+      fonts:
+        - asset: assets/fonts/muli/Muli.ttf
+        - asset: assets/fonts/muli/Muli-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/muli/Muli-Light.ttf
+          weight: 300
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
